--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "apexcharts": "^3.49.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.4.28",
+    "vue-apexcharts": "^1.6.2",
+    "vue3-apexcharts": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
