--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.4.28",
     "vue-apexcharts": "^1.6.2",
+    "vue-gauge": "^1.0.3",
     "vue3-apexcharts": "^1.5.3"
   },
   "devDependencies": {
