--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "apexcharts": "^3.49.1",
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "vue": "^3.4.28",
     "vue-apexcharts": "^1.6.2",
